--- a/HealingArts/ArtistDetails.storyboard
+++ b/HealingArts/ArtistDetails.storyboard
@@ -151,6 +151,7 @@
                     </view>
                     <size key="freeformSize" width="414" height="1000"/>
                     <connections>
+                        <outlet property="artistImageView" destination="QA5-ov-1Uz" id="za6-fg-Zn3"/>
                         <outlet property="artistLabel" destination="whQ-3L-6bz" id="aEv-sM-mis"/>
                         <outlet property="textView" destination="OOV-vI-HQL" id="NWc-pi-Fwv"/>
                     </connections>
