--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -315,6 +315,50 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <rect key="frame" x="0.0" y="2885" width="414" height="615"/>
                                                 <color key="backgroundColor" red="0.2303233496" green="0.2303233496" blue="0.2303233496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tourpic" translatesAutoresizingMaskIntoConstraints="NO" id="3dL-kh-b4c">
+                                                <rect key="frame" x="146" y="2519" width="240" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="240" id="Jp0-DB-uP4"/>
+                                                    <constraint firstAttribute="height" constant="128" id="re8-Ro-Tek"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour2" translatesAutoresizingMaskIntoConstraints="NO" id="3CT-jp-uuL">
+                                                <rect key="frame" x="46" y="2474" width="240" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="7fz-pU-4tA"/>
+                                                    <constraint firstAttribute="width" constant="240" id="KvC-Om-tu8"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4D-mT-OHF">
+                                                <rect key="frame" x="46" y="2374" width="300" height="84"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="300" id="6Gd-Xi-Gud"/>
+                                                    <constraint firstAttribute="height" constant="84" id="jrb-tg-TB9"/>
+                                                </constraints>
+                                                <string key="text">Docent-led tours of the collection are offered to the general public on Saturdays on a first-come first-served basis for 15 people from 1 p.m. to 3 p.m. Saturdays. Self-guided tours are not allowed.</string>
+                                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzY-As-81c">
+                                                <rect key="frame" x="47" y="2812" width="320" height="30"/>
+                                                <color key="backgroundColor" red="0.8323639035" green="0.22160029410000001" blue="0.18024101849999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="320" id="3Si-Xy-B72"/>
+                                                    <constraint firstAttribute="height" constant="30" id="rCV-Vi-vTy"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="20"/>
+                                                <state key="normal" title="SIGN UP HERE">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour3" translatesAutoresizingMaskIntoConstraints="NO" id="rkG-P6-q8x">
+                                                <rect key="frame" x="91" y="2610" width="240" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="Wiv-cl-Ei4"/>
+                                                    <constraint firstAttribute="width" constant="240" id="gaG-91-fED"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -331,15 +375,18 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstAttribute="trailing" secondItem="VbV-Av-W4A" secondAttribute="trailing" constant="10" id="CuH-P7-gd4"/>
                                             <constraint firstItem="Ygr-z5-3m6" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="DJd-I3-eAR"/>
                                             <constraint firstItem="UG9-yZ-Avg" firstAttribute="top" secondItem="ecl-jG-Fnz" secondAttribute="bottom" id="EhW-Ut-b0W"/>
+                                            <constraint firstItem="3dL-kh-b4c" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="146" id="FMe-Ao-DCc"/>
                                             <constraint firstItem="jX8-wm-D0t" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="FjV-7J-Vct"/>
                                             <constraint firstAttribute="trailing" secondItem="wLU-pk-HIc" secondAttribute="trailing" constant="-80.5" id="G1b-qv-8sg"/>
                                             <constraint firstItem="ySE-8f-LnD" firstAttribute="top" secondItem="ZU2-uY-lBB" secondAttribute="bottom" constant="54" id="G9t-eE-1H5"/>
                                             <constraint firstItem="Ch7-FJ-bQj" firstAttribute="top" secondItem="SgD-Qv-JMF" secondAttribute="top" constant="-55" id="HZV-yH-lbq"/>
                                             <constraint firstItem="ixV-5d-u33" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="46" id="Hg0-Yp-V2c"/>
                                             <constraint firstAttribute="trailing" secondItem="KP0-QF-3pK" secondAttribute="trailing" constant="22" id="IOr-MM-VKs"/>
+                                            <constraint firstItem="rkG-P6-q8x" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="91" id="Ivs-M2-BVv"/>
                                             <constraint firstAttribute="trailing" secondItem="Ygr-z5-3m6" secondAttribute="trailing" id="L5q-Mf-4zO"/>
                                             <constraint firstAttribute="trailing" secondItem="UG9-yZ-Avg" secondAttribute="trailing" constant="38" id="LVg-ia-933"/>
                                             <constraint firstItem="ZU2-uY-lBB" firstAttribute="top" secondItem="Ch7-FJ-bQj" secondAttribute="bottom" constant="29" id="LjS-OX-yk0"/>
+                                            <constraint firstItem="3CT-jp-uuL" firstAttribute="top" secondItem="ZH2-h9-9T6" secondAttribute="bottom" constant="120" id="Mgi-VZ-EaO"/>
                                             <constraint firstItem="ZH2-h9-9T6" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="46" id="Nc2-T3-jAK"/>
                                             <constraint firstItem="jX8-wm-D0t" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="5" id="Osb-Uy-DK8"/>
                                             <constraint firstAttribute="trailing" secondItem="JAX-Am-suE" secondAttribute="trailing" constant="28" id="PID-xV-ij5"/>
@@ -351,15 +398,19 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="Ygr-z5-3m6" firstAttribute="top" secondItem="ZuW-LS-1qd" secondAttribute="bottom" constant="15" id="VPP-6i-nie"/>
                                             <constraint firstAttribute="height" constant="3500" id="Vju-68-yDc"/>
                                             <constraint firstAttribute="trailing" secondItem="jcQ-Ye-cZS" secondAttribute="trailing" id="Vo0-0c-2iS"/>
+                                            <constraint firstItem="vzY-As-81c" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="47" id="XKL-db-D1A"/>
+                                            <constraint firstAttribute="trailing" secondItem="3dL-kh-b4c" secondAttribute="trailing" constant="28" id="XbI-oo-N7v"/>
                                             <constraint firstItem="awY-iT-rU6" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="19" id="Xfd-60-GGd"/>
                                             <constraint firstAttribute="trailing" secondItem="fE8-N6-enM" secondAttribute="trailing" constant="38" id="YI1-CM-ooD"/>
                                             <constraint firstItem="ySE-8f-LnD" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="88" id="YwP-CB-XnW"/>
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="leading" secondItem="5Uq-VG-Str" secondAttribute="trailing" constant="8" id="ZH6-zx-JdT"/>
                                             <constraint firstAttribute="trailing" secondItem="ecl-jG-Fnz" secondAttribute="trailing" constant="69" id="atw-5d-eRD"/>
                                             <constraint firstItem="ZU2-uY-lBB" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="58" id="b22-gb-nPa"/>
+                                            <constraint firstItem="X4D-mT-OHF" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="46" id="bN7-8a-r2d"/>
                                             <constraint firstItem="ZuW-LS-1qd" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="-4" id="bvC-eX-5ZJ"/>
                                             <constraint firstItem="VbV-Av-W4A" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="10" id="d34-PB-NBW"/>
                                             <constraint firstAttribute="trailing" secondItem="jX8-wm-D0t" secondAttribute="trailing" constant="5" id="dGv-Vw-RTq"/>
+                                            <constraint firstItem="3dL-kh-b4c" firstAttribute="top" secondItem="ZH2-h9-9T6" secondAttribute="bottom" constant="165" id="dja-VB-MhK"/>
                                             <constraint firstItem="jX8-wm-D0t" firstAttribute="top" secondItem="SgD-Qv-JMF" secondAttribute="top" constant="185" id="dxR-Qu-2hy"/>
                                             <constraint firstItem="0GV-uk-ggK" firstAttribute="top" secondItem="Ygr-z5-3m6" secondAttribute="bottom" constant="-5" id="dz8-i5-O4S"/>
                                             <constraint firstItem="b47-9C-fAi" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="eJe-CP-21R"/>
@@ -367,21 +418,27 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="ecl-jG-Fnz" firstAttribute="top" secondItem="ySE-8f-LnD" secondAttribute="bottom" constant="35" id="ep9-9Q-nO0"/>
                                             <constraint firstItem="VbV-Av-W4A" firstAttribute="top" secondItem="jX8-wm-D0t" secondAttribute="bottom" constant="6.5" id="esB-FP-jyK"/>
                                             <constraint firstItem="5Uq-VG-Str" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="35" id="g1h-0H-qdn"/>
+                                            <constraint firstAttribute="trailing" secondItem="vzY-As-81c" secondAttribute="trailing" constant="47" id="gVm-2E-j1y"/>
                                             <constraint firstItem="fE8-N6-enM" firstAttribute="top" secondItem="UG9-yZ-Avg" secondAttribute="bottom" constant="15" id="ghe-aZ-8A5"/>
+                                            <constraint firstItem="X4D-mT-OHF" firstAttribute="top" secondItem="ZH2-h9-9T6" secondAttribute="bottom" constant="20" id="gvk-sU-e2t"/>
                                             <constraint firstAttribute="trailing" secondItem="0GV-uk-ggK" secondAttribute="trailing" id="hO7-Y2-gnV"/>
                                             <constraint firstItem="jcQ-Ye-cZS" firstAttribute="top" secondItem="SgD-Qv-JMF" secondAttribute="top" constant="-29" id="heu-Un-opN"/>
                                             <constraint firstItem="fE8-N6-enM" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="57" id="hjX-O6-YeZ"/>
                                             <constraint firstItem="UG9-yZ-Avg" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="57" id="ixN-df-cQw"/>
                                             <constraint firstItem="ecl-jG-Fnz" firstAttribute="top" secondItem="ixV-5d-u33" secondAttribute="bottom" constant="15.5" id="ja1-a0-NBI"/>
+                                            <constraint firstItem="rkG-P6-q8x" firstAttribute="top" secondItem="3CT-jp-uuL" secondAttribute="bottom" constant="8" id="lOG-n1-AEy"/>
                                             <constraint firstItem="ecl-jG-Fnz" firstAttribute="top" secondItem="ySE-8f-LnD" secondAttribute="bottom" constant="35" id="nld-Tr-5LI"/>
                                             <constraint firstItem="Afz-Fl-5g7" firstAttribute="top" secondItem="awY-iT-rU6" secondAttribute="bottom" constant="8" id="rHd-fJ-TFe"/>
                                             <constraint firstItem="jcQ-Ye-cZS" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="rtL-iA-qqf"/>
+                                            <constraint firstItem="vzY-As-81c" firstAttribute="top" secondItem="3dL-kh-b4c" secondAttribute="bottom" constant="165" id="tGp-G9-crH"/>
+                                            <constraint firstItem="3CT-jp-uuL" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="46" id="u1a-1h-Uqa"/>
                                             <constraint firstAttribute="trailing" secondItem="ixV-5d-u33" secondAttribute="trailing" constant="70" id="uFD-2h-qT1"/>
                                             <constraint firstAttribute="trailing" secondItem="ySE-8f-LnD" secondAttribute="trailing" constant="28" id="udE-0r-rPa"/>
                                             <constraint firstItem="ixV-5d-u33" firstAttribute="top" secondItem="ZU2-uY-lBB" secondAttribute="bottom" constant="73.5" id="uf8-s6-EZX"/>
                                             <constraint firstAttribute="trailing" secondItem="ZU2-uY-lBB" secondAttribute="trailing" constant="-6" id="ujw-yT-EXb"/>
                                             <constraint firstItem="Afz-Fl-5g7" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="57" id="viL-FS-j6U"/>
                                             <constraint firstItem="Afz-Fl-5g7" firstAttribute="top" secondItem="5Uq-VG-Str" secondAttribute="bottom" constant="27" id="wVn-wI-TNU"/>
+                                            <constraint firstAttribute="trailing" secondItem="3CT-jp-uuL" secondAttribute="trailing" constant="128" id="xUT-2o-Twy"/>
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="14" id="y1B-we-LxM"/>
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="leading" secondItem="awY-iT-rU6" secondAttribute="trailing" constant="8" id="yZ8-xn-8Os"/>
                                             <constraint firstItem="5Uq-VG-Str" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="55" id="z1f-y1-fac"/>
@@ -474,6 +531,9 @@ The Healing Arts program will be comprised of a growing list of elements to help
         <image name="aboutIcon" width="25" height="25"/>
         <image name="chihulySanctuary" width="640" height="380"/>
         <image name="newCancer" width="950" height="839"/>
+        <image name="tour2" width="2048" height="1220"/>
+        <image name="tour3" width="2048" height="1360"/>
+        <image name="tourpic" width="2048" height="1225"/>
         <image name="tower" width="1000" height="1500"/>
         <image name="youtubeButton" width="356" height="243"/>
     </resources>
