--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -127,7 +127,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 <rect key="frame" x="0.0" y="88" width="414" height="3512"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SgD-Qv-JMF">
-                                        <rect key="frame" x="1" y="0.0" width="414" height="3500"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="3500"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b47-9C-fAi">
                                                 <rect key="frame" x="0.0" y="833" width="414" height="818"/>
@@ -315,6 +315,13 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <rect key="frame" x="0.0" y="2885" width="414" height="615"/>
                                                 <color key="backgroundColor" red="0.2303233496" green="0.2303233496" blue="0.2303233496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour3" translatesAutoresizingMaskIntoConstraints="NO" id="rkG-P6-q8x">
+                                                <rect key="frame" x="91" y="2610" width="240" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="Wiv-cl-Ei4"/>
+                                                    <constraint firstAttribute="width" constant="240" id="gaG-91-fED"/>
+                                                </constraints>
+                                            </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tourpic" translatesAutoresizingMaskIntoConstraints="NO" id="3dL-kh-b4c">
                                                 <rect key="frame" x="146" y="2519" width="240" height="128"/>
                                                 <constraints>
@@ -352,13 +359,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour3" translatesAutoresizingMaskIntoConstraints="NO" id="rkG-P6-q8x">
-                                                <rect key="frame" x="91" y="2610" width="240" height="128"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="128" id="Wiv-cl-Ei4"/>
-                                                    <constraint firstAttribute="width" constant="240" id="gaG-91-fED"/>
-                                                </constraints>
-                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -447,11 +447,10 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="SgD-Qv-JMF" firstAttribute="leading" secondItem="Cwe-Ih-cGp" secondAttribute="leading" constant="1" id="3Lc-hZ-NW1"/>
                                     <constraint firstItem="SgD-Qv-JMF" firstAttribute="top" secondItem="Cwe-Ih-cGp" secondAttribute="top" id="BMX-yT-atJ"/>
-                                    <constraint firstItem="SgD-Qv-JMF" firstAttribute="centerX" secondItem="Cwe-Ih-cGp" secondAttribute="centerX" constant="1" id="b3r-hY-eJN"/>
-                                    <constraint firstAttribute="trailing" secondItem="SgD-Qv-JMF" secondAttribute="trailing" constant="-1" id="tGm-Ni-a05"/>
-                                    <constraint firstAttribute="bottom" secondItem="SgD-Qv-JMF" secondAttribute="bottom" constant="12" id="u9g-um-SLP"/>
+                                    <constraint firstItem="SgD-Qv-JMF" firstAttribute="leading" secondItem="Cwe-Ih-cGp" secondAttribute="leading" id="Cwz-tS-yVp"/>
+                                    <constraint firstAttribute="bottom" secondItem="SgD-Qv-JMF" secondAttribute="bottom" id="Y9e-WB-wUM"/>
+                                    <constraint firstAttribute="trailing" secondItem="SgD-Qv-JMF" secondAttribute="trailing" id="mQs-tB-AWr"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
