--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -452,13 +452,9 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <state key="normal" title="MORE EVENTS">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
-                                                <connections>
-                                                    <segue destination="xgd-Bb-c0y" kind="show" id="PJY-vW-XO1"/>
-                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Uq-VG-Str">
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Uq-VG-Str">
                                                 <rect key="frame" x="57" y="1769" width="89" height="86"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="  "/>
                                                 <connections>
                                                     <action selector="videoButton:" destination="HNa-kJ-spY" eventType="touchUpInside" id="Dog-He-Z4l"/>
@@ -618,14 +614,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jIq-aG-MF9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3446" y="261"/>
-        </scene>
-        <!--Calendar-->
-        <scene sceneID="nlv-Vs-9Jn">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Calendar" id="xgd-Bb-c0y" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MZg-W2-9em" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3688" y="1189"/>
         </scene>
         <!--Feedback-->
         <scene sceneID="hhU-Nx-n05">
